add loading animation

--- a/style.css
+++ b/style.css
@@ -3,6 +3,78 @@
     margin:0;
 }
 
+.loading{
+    background-color: black;
+    height: 100vh;
+    width:100%;
+    position: fixed;
+    z-index: 100;
+  }
+  
+.container {
+      --uib-size: 120px;
+      --uib-color: white;
+      --uib-speed: 1.3s;
+      --uib-bg-opacity: .1;
+      height:100px; /*calc(var(--uib-size) * (2.1 / 5));*/
+      width: 100%;  
+      /*var(--uib-size);*/
+      transform-origin: center;
+      overflow: visible;
+      align-items: center;
+      display:flex;
+      justify-content: center;
+      position: relative;
+      margin-top: 20%;
+}
+  
+.car {
+      fill: none;
+      stroke: var(--uib-color);
+      stroke-dasharray: 15, 85;
+      stroke-dashoffset: 0;
+      stroke-linecap: round;
+      animation: travel var(--uib-speed) linear infinite;
+      will-change: stroke-dasharray, stroke-dashoffset;
+      transition: stroke 0.5s ease;
+    }
+  
+.track {
+      stroke: var(--uib-color);
+      opacity: var(--uib-bg-opacity);
+    }
+  
+.disppear{
+      animation:vanish 3s forwards;
+      animation-delay: 2s;
+    }
+  
+    @keyframes travel {
+      0% {
+        stroke-dashoffset: 0;
+      }
+  
+      100% {
+        stroke-dashoffset: 100;
+      }
+    }
+  
+    @keyframes vanish{
+      
+      25%{
+        opacity:0;
+        visibility: hidden;
+      }
+      50%{
+        opacity:0;
+        visibility: hidden;
+      }
+      100%{
+        opacity:0;
+        visibility: hidden;
+      }
+    }
+
 header {
     background-color:#1e1f42;
     opacity:0.95;
